Fixed hackathon page sponsor wrap

--- a/src/Components/HackathonPage/Sponsors/Sponsors.css
+++ b/src/Components/HackathonPage/Sponsors/Sponsors.css
@@ -1,13 +1,20 @@
+.container{
+  overflow: hidden;
+}
 .row {
   display: flex;
   flex-direction: row;
   margin-top: 0;
+  
 }
 
 .sponsors-row {
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 40px !important;
-  width: 80%;
+  width: 90%;
+  flex-flow: wrap;
+  flex-grow: 0;
+
 }
 
 #first,
